[tool.poetry]
name = "Game-API"
version = "0.1.0"
description = "Une simple Api de jeux faite en python"
authors = ["NomCustom"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
